==> midibox/mios32/mios32/LPC17xx/mios32_uart.c <==
#include <mios32.h>
#define MIOS32_UART_RX_BUFFER_SIZE 16
#define MIOS32_UART_TX_BUFFER_SIZE 16
#define UART_PERIPHERAL_FRQ (MIOS32_SYS_CPU_FREQUENCY/4000000)
#define MIOS32_UART0_TX_INIT     { LPC_PINCON->PINSEL0 &= ~(3 << (2*2)); LPC_PINCON->PINSEL0 |= (1 << (2*2)); }
#define MIOS32_UART0_RX_INIT     { LPC_PINCON->PINSEL0 &= ~(3 << (2*3)); LPC_PINCON->PINSEL0 |= (1 << (2*3)); }
#define MIOS32_UART0             LPC_UART0
#define LSR_RDR         0x01
#define LSR_OE          0x02
#define LSR_PE          0x04
#define LSR_FE          0x08
#define LSR_BI          0x10
#define LSR_THRE        0x20
#define LSR_TEMT        0x40
#define LSR_RXFE        0x80

s32 MIOS32_UART_Init(u32 mode)
{
  // currently only mode 0 supported
  if( mode != 0 )
    return -1; // unsupported mode

#if MIOS32_UART_NUM == 0
  return -1; // no UARTs
#else

  // configure UART pins
  MIOS32_UART0_TX_INIT;
  MIOS32_UART0_RX_INIT;
#if MIOS32_UART_NUM >= 2
  MIOS32_UART1_TX_INIT;
  MIOS32_UART1_RX_INIT;
#endif
#if MIOS32_UART_NUM >= 3
  MIOS32_UART2_TX_INIT;
  MIOS32_UART2_RX_INIT;
#endif

  // clear size counters
  int i;
  for(i=0; i<MIOS32_UART_NUM; ++i) {
    tx_buffer_size[i] = 0;
  }

  // UART configuration
  MIOS32_UART_BaudrateSet(0, MIOS32_UART0_BAUDRATE);
#if MIOS32_UART_NUM >=2
  MIOS32_UART_BaudrateSet(1, MIOS32_UART1_BAUDRATE);
#endif
#if MIOS32_UART_NUM >=3
  MIOS32_UART_BaudrateSet(2, MIOS32_UART2_BAUDRATE);
#endif

  return 0; // no error
#endif
}

s32 MIOS32_UART_BaudrateSet(u8 uart, u32 baudrate)
{
#if MIOS32_UART_NUM == 0
  return -1; // no UART available
#else
  if( uart >= MIOS32_UART_NUM )
    return -1;

  LPC_UART_TypeDef *u = (LPC_UART_TypeDef *)uart_base[uart];

  // USART configuration
  u->LCR = 0x83; // 8 bits, no Parity, 1 Stop bit, DLAB=1
  u32 Fdiv = ( UART_PERIPHERAL_FRQ / 16 ) / baudrate ;   // Set baud rate
  u->DLM = Fdiv / 256;                                                        
  u->DLL = Fdiv % 256;
  u->LCR = 0x03;              // 8 bits, no Parity, 1 Stop bit DLAB = 0
  u->FCR = 0x07;              // Enable and reset TX and RX FIFO

  // store baudrate in array
  uart_baudrate[uart] = baudrate;

  return 0;
#endif
}

s32 MIOS32_UART_RxBufferFree(u8 uart)
{
#if MIOS32_UART_NUM == 0
  return 0; // no UART available
#else
  if( uart >= MIOS32_UART_NUM )
    return 0;
  else {
    // fake size, since LPC based uart doesn't provide access to the FIFO pointer
    LPC_UART_TypeDef *u = (LPC_UART_TypeDef *)uart_base[uart];
    return (u->LSR & LSR_RDR) ? 0 : MIOS32_UART_RX_BUFFER_SIZE;
  }
#endif
}

s32 MIOS32_UART_RxBufferUsed(u8 uart)
{
#if MIOS32_UART_NUM == 0
  return 0; // no UART available
#else
  if( uart >= MIOS32_UART_NUM )
    return 0;
  else {
    // fake size, since LPC based uart doesn't provide access to the FIFO pointer
    LPC_UART_TypeDef *u = (LPC_UART_TypeDef *)uart_base[uart];
    return (u->LSR & LSR_RDR) ? MIOS32_UART_RX_BUFFER_SIZE : 0;
  }
#endif
}

s32 MIOS32_UART_RxBufferGet(u8 uart)
{
#if MIOS32_UART_NUM == 0
  return -1; // no UART available
#else
  if( uart >= MIOS32_UART_NUM )
    return -1; // UART not available

  LPC_UART_TypeDef *u = (LPC_UART_TypeDef *)uart_base[uart];
  if( (u->LSR & LSR_RDR) == 0 )
    return -2; // nothing new in buffer

  // read byte from FIFO
  u8 b = LPC_UART0->RBR;

  return b; // return received byte
#endif
}

s32 MIOS32_UART_RxBufferPeek(u8 uart)
{
#if MIOS32_UART_NUM == 0
  return -1; // no UART available
#else
  if( uart >= MIOS32_UART_NUM )
    return -1; // UART not available

  LPC_UART_TypeDef *u = (LPC_UART_TypeDef *)uart_base[uart];
  if( (u->LSR & LSR_RDR) == 0 )
    return -2; // nothing new in buffer

  // not supported by LPC based UART
  return -3;
#endif
}

s32 MIOS32_UART_TxBufferPutMore_NonBlocking(u8 uart, u8 *buffer, u16 len)
{
#if MIOS32_UART_NUM == 0
  return -1; // no UART available
#else
  if( uart >= MIOS32_UART_NUM )
    return -1; // UART not available

  LPC_UART_TypeDef *u = (LPC_UART_TypeDef *)uart_base[uart];
  if( (u->LSR & LSR_THRE) == 0 )
    return -2; // buffer full or cannot get all requested bytes (retry)

  // copy bytes to be transmitted into transmit buffer
  u16 i;
  for(i=0; i<len; ++i) {
    while( (u->LSR & LSR_THRE) == 0 ); // blocking... :-/
    u->THR = *buffer++;
  }

  return 0; // no error
#endif
}
